Исправлены предупреждения